# smapper

./: .gitignore  .gitmodules  README.md  bootstrap.sh  mkdocs.yml
cad/: AttachementSlider.stl  RealsenseAttachement.stl
calibration/calib_toolbox/: main.py  pyproject.toml
calibration/calib_toolbox/calib_toolbox/: calibration.py  config.py  docker.py  executor.py  rosbags.py  utils.py
calibration/kalibr/: april_6x8_35cmx35cm.yaml  kalibr.sh
calibration/kalibr/dynamic/Calibration_Front_Left-1970_01_01-01_14_44/: Calibration_Front_Left-1970_01_01-01_14_44-camchain-imucam.yaml  Calibration_Front_Left-1970_01_01-01_14_44-imu.yaml  Calibration_Front_Left-1970_01_01-01_14_44-results-imucam.txt
calibration/kalibr/dynamic/Calibration_Front_Right-1970_01_01-01_12_37/: Calibration_Front_Right-1970_01_01-01_12_37-camchain-imucam.yaml  Calibration_Front_Right-1970_01_01-01_12_37-imu.yaml  Calibration_Front_Right-1970_01_01-01_12_37-results-imucam.txt
calibration/kalibr/dynamic/Calibration_Realsense-1970_01_01-01_17_39/: Calibration_Realsense-1970_01_01-01_17_39-camchain-imucam.yaml  Calibration_Realsense-1970_01_01-01_17_39-imu.yaml  Calibration_Realsense-1970_01_01-01_17_39-results-imucam.txt
calibration/kalibr/dynamic/Calibration_Side_Left-1970_01_01-01_10_23/: Calibration_Side_Left-1970_01_01-01_10_23-camchain-imucam.yaml  Calibration_Side_Left-1970_01_01-01_10_23-imu.yaml  Calibration_Side_Left-1970_01_01-01_10_23-results-imucam.txt
calibration/kalibr/dynamic/Calibration_Side_Right-1970_01_01-01_08_35/: Calibration_Side_Right-1970_01_01-01_08_35-camchain-imucam.yaml  (+2 more)
calibration/kalibr/targets/: april_6x6_80x80cm.yaml
config/: os-122436001165-metadata.json
config/mprocs/: bringup.yaml
config/network/: 10-cyclone-max.conf  cyclonedds.xml  ouster.conf
config/rviz/: viz.rviz
daemons/: smapper_api.service  smapper_app.service
docker/kalibr/: Dockerfile
docker/sgraphs/: docker-compose.yml  mprocs_conf.yaml  sgraphs.Dockerfile
docs/: argus.md  backup.md  calibration.md  components.md  index.md  jetson-setup.md  setup_guide.md
docs/📦 ROS Packages/: argus_camera_ros.md
hardware/STEP/: Battery Handle Assembly.step  DovetailMale.step
hardware/STL/: DovetailMale-HandleAttachement.stl  EnclosureBasePlate.stl  EnclosureLetters.stl  EnclosureOusterCableSupport-MetalPlate.stl  EnclosureOusterInterfaceBoxSpacer-MetalPlate.stl  EnclosureTopPlateBasic.stl  EnclosureTopPlateMetal.stl  Handle.stl  LidarCageBackLeg.stl  LidarCageFrontLeg.stl  LidarCageTopPlate.stl
hardware/cad/: AttachementCoupler.stl
infra/daemons/: multicast-lo.service  phc2sys.service  ptp4l.service
infra/docker/kalibr/: Dockerfile
infra/docker/sgraphs/: s_graphs_ros2.rviz
infra/patches/: 5.15.136-tegra.tar.xz
infra/scripts/: bootstrap.sh
infra/udev/: nvpps.rules
scripts/: argus_cam_performance.py  bootstrap.sh  camera_viewer.py  kalibr.sh  kalibr_to_caminfo.py
smapper_api/app/routers/: sensors.py
smapper_app/: package.json  pnpm-lock.yaml
software/ros_ws/src/: os-122436001165-metadata.json
software/ros_ws/src/argus_camera_ros/: CMakeLists.txt  package.xml
software/ros_ws/src/argus_camera_ros/config/: default.yaml  front_left_info.yaml  front_right_info.yaml  left_info.yaml  params.yaml  right_info.yaml  side_left_info.yaml  side_right_info.yaml
software/ros_ws/src/argus_camera_ros/include/argus_camera_ros/: camera_node.hpp  multi_camera.hpp  ring_buffer.hpp
software/ros_ws/src/argus_camera_ros/launch/: argus_camera.launch.py
software/ros_ws/src/argus_camera_ros/src/: argus_camera_node.cpp  multi_camera_node.cpp  single_camera_node.cpp
software/ros_ws/src/argus_camera_ros/src/argus_camera_ros/: camera_node.cpp  multi_camera.cpp  ring_buffer.cpp
(+139 files in other folders)
